--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
     background-size: cover; /* Add this line */
 }
 #knap2 {
-    position: absolute;
-    left: 150;
-    bottom: 150;
+    position: relative;
+    left: -500;
+    top: 400;
     width: 300px;
     border: 3px solid #73AD21;
     padding: 10px;
@@ -27,21 +27,22 @@
     width: 90vw;
     border: 5px solid rgb(232, 232, 232);
     border-radius: 20px;
-    background-color: rgba(0, 0, 0, 0,8);
+    background-color: rgba(73, 68, 68, 0,3);
 }
 
 .button {
     display: block;
     width: 355px;
     height: 50px;
-    background-color: rgba(0, 0, 0, 0.01);
+    background-color: rgba(73, 68, 68, 0.3);
     color: white;
     border: 2px solid white;
 }
 
-h1 {
+h2 {
     color: white;
-    margin-bottom: 200px;
+    position: relative;
+    
 }
 
 #chart {
