--- a/style.css
+++ b/style.css
@@ -42,6 +42,18 @@
     background-color: rgba(73, 68, 68, 0.5);
 }
 
+#inner2 {
+    display: flex;
+    flex-direction: c;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 80vh;
+    width: 90vw;
+    border: 5px solid rgb(232, 232, 232);
+    border-radius: 20px;
+    background-color: rgba(73, 68, 68, 0.5);
+}
+
 .button {
     display: block;
     width: 355px;
