--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ align-items: center;
     margin-top: 20px;   
     width: 300px;
     padding: 10px;
-    color: white;
+    color: rgb(100, 97, 97);
     background-color: rgba(255, 255, 255, 0.1);
     border: 1px solid white;
     border-radius: 10px;
@@ -214,18 +214,6 @@ h2 {
     margin-left: 20px;
 
    
-}
-
-#inner5
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    height: 80vh;
-    width: 90vw;
-    border: 5px solid rgb(232, 232, 232);
-    border-radius: 20px;
-    background-color: rgba(73, 68, 68, 0.5);
 }
 
 
