header marginleft tilføjet

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -68,6 +68,7 @@ height: 100px;
 display: flex;
 justify-content: start;
 align-items: center;
+margin-left: 240px;
 }
 .arrowBack{
     rotate: 90deg;
