Fået transport data til, at virke igen

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -61,6 +61,23 @@ body {
     border: 2px solid rgb(13, 12, 12);
 }
 
+  /* transport graf */
+  #test {
+    position: relative;
+    z-index: 1;
+    left: -200px;
+    bottom: -350px;
+  }
+
+  /* transport bar */
+.bar { 
+    fill: steelblue;
+ }
+
+.axis-label { 
+    font-size: 12px; 
+}
+
 
 .header {
 width: 100%;
