--- a/frontend/style.css
+++ b/frontend/style.css
@@ -83,7 +83,7 @@ body {
 
 
 .header {
-width: 100%;
+width: 90%;
 height: 100px;
 display: flex;
 justify-content: start;
@@ -215,8 +215,9 @@ h2 {
     border: 1px solid rgb(21, 19, 19);
     border-radius: 8px;
     font-size: larger;
-    margin-left: 20px;
-
+    position: absolute;
+    right: 100px;
+    top: 100px;
 }
 
 .topbtn {
@@ -226,10 +227,7 @@ h2 {
     border: 3px solid rgb(5, 5, 5);
     border-radius: 8px;
     font-size: larger;
-    margin-left: 20px;
 
    
 }
-
-
 
