--- a/frontend/style.css
+++ b/frontend/style.css
@@ -15,6 +15,22 @@ body {
 
 
 
+.startPage
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background-image: url(Images/Background2.jpg);
+    background-size: cover; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .main {
     width: 100vw;
     height: 100vh;
@@ -46,7 +62,7 @@ body {
     width: 90vw;
     border: 5px solid rgb(0, 0, 0);
     border-radius: 20px;
-    background-color: rgba(73, 68, 68, 0.5);
+    background-color: rgba(182, 182, 182, 0.8);
 
     position: relative;
 }
@@ -98,6 +114,14 @@ align-items: center;
 .arrowHome{
 
     height: 50%;
+}
+
+.footer {
+    display: flex;
+    justify-content: end;
+   width: 100%;
+    height: 5%;
+    margin-top: 10%;
 }
 
 #knap2 {
@@ -183,11 +207,11 @@ align-items: center;
     width: 90vw;
     border: 5px solid rgb(0, 0, 0);
     border-radius: 20px;
-    background-color: rgba(73, 68, 68, 0.5);
+    background-color: rgba(182, 182, 182, 0.8);
 }
 
 
-h2 {
+h1 {
     color: white;
     position: relative;
     
@@ -215,7 +239,6 @@ h2 {
     border: 1px solid rgb(21, 19, 19);
     border-radius: 8px;
     font-size: larger;
-    position: absolute;
     right: 100px;
     top: 100px;
 }
@@ -223,11 +246,8 @@ h2 {
 .topbtn {
     color: rgb(255, 255, 255);
     background-color: rgba(73, 68, 68, 0.1);
-    padding: 6px;
     border: 3px solid rgb(5, 5, 5);
     border-radius: 8px;
     font-size: larger;
-
-   
 }
 
