--- a/frontend/style.css
+++ b/frontend/style.css
@@ -71,6 +71,19 @@ body {
     pointer-events: none;
 }
 
+#factBox { 
+    position: absolute;
+    visibility: hidden;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    left: 10px;
+    top: 10px;
+    width: 200px;
+    z-index: 100;
+    color: black;
+}
+
 .button {
     display: block;
     width: 355px;
