--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,8 @@
+*{
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
 body {
     margin: 0;
     padding: 0;
@@ -37,7 +42,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #161A30;
+    background-color: #162530;
     background-size: cover; /* Add this line */
 
   min-height: 500px;
@@ -60,9 +65,6 @@ body {
     align-items: center;
     height: 80vh;
     width: 90vw;
-    border: 5px solid rgb(0, 0, 0);
-    border-radius: 20px;
-    background-color: rgba(182, 182, 182, 0.8);
 
     position: relative;
 }
@@ -130,13 +132,6 @@ align-items: center;
     height: 50%;
 }
 
-.footer {
-    display: flex;
-    justify-content: end;
-   width: 100%;
-    height: 5%;
-    margin-top: 10%;
-}
 
 #knap2 {
     margin-top: 20px;   
@@ -180,10 +175,11 @@ align-items: center;
 
 
 .dilemmaButton {
-    color: black;
-    width: 10%;
-    background-color: rgba(73, 68, 68, 0.1);
-    border-radius: 8px;
+    color: rgb(217, 209, 209);
+    width: 20%;
+    height: 80%;
+    background-color: rgba(35, 137, 227, 0.901);
+    border-radius: 5px;
     font-size: larger;
     border: 1px solid rgb(16, 15, 15);
     transition: 1s;
@@ -214,15 +210,6 @@ align-items: center;
 
 
 
-#inner2 {
-    display: flex;
-    flex-direction: column;
-    height: 80vh;
-    width: 90vw;
-    border: 5px solid rgb(0, 0, 0);
-    border-radius: 20px;
-    background-color: rgba(182, 182, 182, 0.8);
-}
 
 
 h1 {
@@ -237,7 +224,7 @@ h1 {
 
     /* Udseende */
     color: white;
-    background-color: rgba(73, 68, 68, 0.1);
+    background-color: rgba(35, 137, 227, 0.901);
     padding: 6px;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 8px;
@@ -248,7 +235,7 @@ h1 {
 .forwardbtn {
 
     color: white;
-    background-color: rgba(73, 68, 68, 0.1);
+    background-color: rgba(35, 137, 227, 0.901);
     padding: 6px;
     border: 1px solid rgb(21, 19, 19);
     border-radius: 8px;
@@ -259,7 +246,7 @@ h1 {
 
 .topbtn {
     color: rgb(255, 255, 255);
-    background-color: rgba(73, 68, 68, 0.1);
+    background-color: rgba(35, 137, 227, 0.901);
     border: 3px solid rgb(5, 5, 5);
     border-radius: 8px;
     font-size: larger;
