--- a/frontend/style.css
+++ b/frontend/style.css
@@ -175,12 +175,11 @@ align-items: center;
     
     }
 
-    .sandwichImg{
+    .sandwichImg, .kaffeImg, .havregrynImg, .coldShowerImg, .hotShowerImg{
         opacity: 0;
-        transform: translateY(20px);
-        transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+        transition: opacity 2s ease, transform 2s ease;
     }
-    .sandwichImg.visible {
+    .sandwichImg.visible, .kaffeImg.visible, .havregrynImg.visible, .coldShowerImg.visible, .hotShowerImg.visible{
         opacity: 1;
         transform: translateY(0);
     }
