--- a/frontend/style.css
+++ b/frontend/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: rgba(73, 68, 68, 0.5);
+    background-color: #1d435f;
     color: white;
 }
 
