--- a/frontend/style.css
+++ b/frontend/style.css
@@ -59,9 +59,15 @@ body {
     align-items: center;
     height: 80vh;
     width: 90vw;
-
-    position: relative;
 }
+
+#inner2 {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+
+}
+
 
 .uniqueSvg {
     pointer-events: none;
