--- a/frontend/style.css
+++ b/frontend/style.css
@@ -63,7 +63,7 @@ body {
 
 #inner2 {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row-;
     justify-content: flex-start;
 
 }
