--- a/frontend/style.css
+++ b/frontend/style.css
@@ -73,18 +73,17 @@ body {
     pointer-events: none;
 }
 
-#factBox { 
-    position: relative;
+#factBox {
+    position: absolute;
+    top: 100px; /* Adjust this value as needed */
+    left: 100px; /* Adjust this value as needed */
     visibility: hidden;
     background-color: white;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     padding: 10px;
-    left: -700px;
-    top: 10px;
-    width: 200px;
-    z-index: 100;
     color: black;
 }
+
 
 
 .button {
