--- a/frontend/style.css
+++ b/frontend/style.css
@@ -64,9 +64,15 @@ body {
 #inner2 {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: flex-start;
 
 }
+ #inner16, #innner12{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row-reverse;
+ }
+
+
 .textContainer {
     display: flex;
     justify-content: start;
@@ -77,7 +83,10 @@ body {
 a {
     color: white;
 }
-
+p {
+  
+    font-size: 1.2em;
+}
 .textForMap {
   position: relative;
   bottom: 30%;
