--- a/frontend/style.css
+++ b/frontend/style.css
@@ -19,21 +19,8 @@ body {
 } */
 
 
-
-.startPage
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    background-image: url(Images/Background2.jpg);
-    background-size: cover; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.textbox1 {
+    max-width: 500px;
 }
 
 .main {
@@ -42,12 +29,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #1d435f;
+    background-color: rgba(24, 60, 91, 0.901);
     background-size: cover; /* Add this line */
 
   /* min-height: 500px; */
-
-
 
 
 }
@@ -64,6 +49,8 @@ body {
 #inner2 {
     display: flex;
     flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
 
 
 }
@@ -74,11 +61,26 @@ body {
     /* gap: 0px; */
  }
 
+ #main2, #main8, #main14{
+    background-color: rgba(30, 76, 116, 0.901);
+    padding-top: 5%;
+ }
+ 
+ #main3{
+    background-color: rgba(43, 95, 141, 0.652);
+ }
+
 
 .dynamicContent8 {
     max-width: 500px;
 
+
 }
+#dynamicContent{
+    max-width: 600px;
+    padding-top: 20%;
+}
+
 
 .textContainer {
     display: flex;
@@ -146,7 +148,7 @@ p {
 
 .header {
 width: 90%;
-height: 100px;
+height: 10%;
 display: flex;
 justify-content: end;
 align-items: center;
