--- a/frontend/style.css
+++ b/frontend/style.css
@@ -66,7 +66,7 @@ width: 60%;
     width: 90vw;
 }
 
-#inner2 {
+#inner2, #inner8, #inner14 {
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
