--- a/frontend/style.css
+++ b/frontend/style.css
@@ -89,11 +89,12 @@ width: 60%;
 
 .dynamicContent8 {
     max-width: 500px;
-
-
+    font-size: larger;
 }
-#dynamicContent{
+
+#dynamicContent, #dynamicContent4, #dynamicContent7, #dynamicContent3 {
     max-width: 600px;
+    font-size: larger;
 }
 
 
